--- a/asound.conf
+++ b/asound.conf
@@ -1,19 +1,36 @@
-# ALSA configuration file
+# The IPC key of dmix or dsnoop plugin must be unique
+# If 555555 or 666666 is used by other processes, use another one
 
-# Specify the default sound card
+# use samplerate to resample as speexdsp resample is bad
+defaults.pcm.rate_converter "samplerate"
+
 pcm.!default {
-    type hw
-    card 0
+    type asym
+    playback.pcm "playback"
+    capture.pcm "capture"
 }
 
-# Set playback and capture settings
-pcm.!default {
+pcm.playback {
     type plug
-    slave.pcm "dmix"
+    slave.pcm "dmixed"
 }
 
-# Ensure that ALSA mixer gets the correct card settings
-ctl.!default {
-    type hw
-    card 0
+pcm.capture {
+    type plug
+    slave.pcm "array"
+}
+
+pcm.dmixed {
+    type dmix
+    slave.pcm "hw:wm8960soundcard"
+    ipc_key 555555 
+}
+
+pcm.array {
+    type dsnoop
+    slave {
+        pcm "hw:wm8960soundcard"
+        channels 2
+    }
+    ipc_key 666666
 }
