--- a/asound.conf
+++ b/asound.conf
@@ -1,36 +1,19 @@
-# The IPC key of dmix or dsnoop plugin must be unique
-# If 555555 or 666666 is used by other processes, use another one
+# ALSA configuration file
 
-# use samplerate to resample as speexdsp resample is bad
-defaults.pcm.rate_converter "samplerate"
-
+# Specify the default sound card
 pcm.!default {
-    type asym
-    playback.pcm "playback"
-    capture.pcm "capture"
+    type hw
+    card 0
 }
 
-pcm.playback {
+# Set playback and capture settings
+pcm.!default {
     type plug
-    slave.pcm "dmixed"
+    slave.pcm "dmix"
 }
 
-pcm.capture {
-    type plug
-    slave.pcm "array"
-}
-
-pcm.dmixed {
-    type dmix
-    slave.pcm "hw:wm8960soundcard"
-    ipc_key 555555 
-}
-
-pcm.array {
-    type dsnoop
-    slave {
-        pcm "hw:wm8960soundcard"
-        channels 2
-    }
-    ipc_key 666666
+# Ensure that ALSA mixer gets the correct card settings
+ctl.!default {
+    type hw
+    card 0
 }
